@@ -17,7 +17,7 @@ use Moose;
 use MooseX::StrictConstructor;
 extends 'Chart::OFC2::Element';
 
-our $VERSION = '0.05';
+our $VERSION = '0.06';
 
 =head1 PROPERTIES
 
