@@ -29,7 +29,7 @@ use Moose;
 use Moose::Util::TypeConstraints;
 use MooseX::StrictConstructor;
 
-our $VERSION = '0.05';
+our $VERSION = '0.06';
 
 coerce 'Chart::OFC2::ToolTip'
     => from 'HashRef'
