@@ -2,6 +2,7 @@ Revision history for Chart::OFC2
 
 0.06    25.09.2009
         - #50019 rotate for labels (thanks to noesnaterse <noe@noesnaterse.nl>)
+        - removed Perl 5.10 constructs to promote compatibility with older Perls (thanks to Adam J. Foxson)
 
 0.05    10.08.2009
         - added bar_3d type_name (thanks to JGOULAH <jgoulah@cpan.org>)
